# rust-book-exercises

./: Cargo.toml  README.md  rust-exam.patch  rustfmt.toml
.github/classroom/: autograding.json
count-of/: Cargo.toml
count-of/src/: lib.rs
src/: a_honor_code.rs  b_multiple_choice.rs  c_enums.rs  d_pattern_matching.rs  e_common_traits.rs  f_iterators.rs  g_vector_operations.rs  h_advanced_traits.rs  i_extension_traits.rs  j_path_finding.rs  k_macros.rs  lib.rs
tests/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs
